# Qualtrics-analysis

./: .gitignore  Get Qualtrics Survey.py  README.md  pyproject.toml  qualtrics_analysis.py
.github/workflows/: ci.yml
runs/example/: FR_Material_Background_Survey_FY26.qsf  codebook.csv  column_map.json  frequency_manifest.json  questions_meta.json  responses_clean.csv  run_manifest.json  survey_metadata.json
runs/example/frequency_tables/: QID16_frequencies.csv  QID19730733_frequencies.csv  QID19730734_frequencies.csv  QID19730735_frequencies.csv  QID19730736_frequencies.csv  QID19730737_frequencies.csv  QID19730738_frequencies.csv  QID19730740_frequencies.csv  QID19730741_frequencies.csv  QID19730742_frequencies.csv  QID21_frequencies.csv  QID22_frequencies.csv  QID23_frequencies.csv  QID24_frequencies.csv  QID2_frequencies.csv  QID31_frequencies.csv  QID32_frequencies.csv  QID35_frequencies.csv  QID3_frequencies.csv  Q_DataPolicyViolations_frequencies.csv  date_frequencies.csv
src/qualtrics_pipeline/: __init__.py  cli.py  config.py  config_validate.py  export.py  frequencies.py  question_config.py  report.py  survey_logic.py
tests/: test_cli.py  test_config_validate.py  test_export.py  test_frequencies.py  test_question_config.py  test_report.py  test_survey_logic.py
tests/fixtures/real_run/: codebook.csv  column_map.json  responses_clean.csv  run_manifest.json
